First Links on Root page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Boas Vindas</h1>
-<p> Para ver ou cadastrar nossas vagas clique aqui </p>
-<p> clique aqui </p>
+<h1>LOOKING FOR A JOB</h1>
+<p> <strong> <%= link_to "Company Users", new_companyuser_path %></strong></p>
+<p> <strong> <%= link_to "Users", new_user_path %> </strong> </p>
