added more models

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <h1>LOOKING FOR A JOB</h1>
 <p> <strong> <%= link_to "Company Users", new_companyuser_path %></strong></p>
 <p> <strong> <%= link_to "Users", new_user_path %> </strong> </p>
+<p> <strong> <%= link_to "Companies", companies_path %> </strong> </p>
