--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
-<h1>Boas Vindas</h1>
-<p> Para ver ou cadastrar nossas vagas clique aqui </p>
-<p> clique aqui </p>
+<h1> Welcome to LookingForJobs </h1>
+<h2> <%= link_to 'Companies Available', banana_path %> </h2>
+<h2> <%= link_to 'Employer Section', new_employer_registration_path %> </h2>
+<h2> <%= link_to 'Candidate Section', new_candidate_registration_path %> </h2>
